# carlaBridge

./: CAN_ID.json  LICENSE  carla_bridge_prep.py  carla_bridge_ros2.py  carla_ros2_agent.py  run_exploration_mode_ros2.sh  start_ros2.sh
cppnode/attack_ethernet/: CMakeLists.txt  README.md  package.xml
cppnode/attack_ethernet/config/: settings.yaml
cppnode/attack_ethernet/include/attack_ethernet/: attack_ethernet.hpp  config.hpp  config_node.hpp
cppnode/attack_ethernet/launch/: attack_ethernet.launch.xml
cppnode/attack_ethernet/scripts/: ethernet_attack_control.sh
cppnode/attack_ethernet/src/: attack_ethernet.cpp  config.cpp
cppnode/attack_ethernet/test/: test.py
cppnode/attack_gnss/: CMakeLists.txt  package.xml
cppnode/attack_gnss/config/: settings.yaml
cppnode/attack_gnss/include/attack_gnss/: attack_gnss.hpp  config.hpp  config_node.hpp  gnss_convert.hpp
cppnode/attack_gnss/launch/: attack_gnss.launch.xml
cppnode/attack_gnss/scripts/: gnss_attack_control.sh
cppnode/attack_gnss/src/: attack_gnss.cpp  config.cpp  gnss_convert.cpp
cppnode/attack_gnss_msgs/: CMakeLists.txt  package.xml
cppnode/attack_gnss_msgs/msg/: GNSSAttackConfig.msg  GNSSAttackStatus.msg
cppnode/attack_lidar_blind/: CMakeLists.txt  package.xml
cppnode/attack_lidar_blind/config/: settings.yaml
cppnode/attack_lidar_blind/include/attack_lidar_blind/: attack_lidar_blind.hpp  config.hpp  config_node.hpp
cppnode/attack_lidar_blind/launch/: attack_lidar_blind.launch.xml
cppnode/attack_lidar_blind/scripts/: lidar_attack_control.sh
cppnode/attack_lidar_blind/src/: attack_lidar_blind.cpp  config.cpp
cppnode/attack_lidar_blind_msgs/: CMakeLists.txt  package.xml
cppnode/attack_lidar_blind_msgs/msg/: LidarAttackConfig.msg  LidarBlindStatus.msg
cppnode/carla_ros2_agent/: CMakeLists.txt  package.xml
cppnode/carla_ros2_agent/cmake/: carla_client.cmake
cppnode/carla_ros2_agent/config/: objects.json  settings.yaml
cppnode/carla_ros2_agent/include/carla_ros2_agent/: agent.hpp  agent_handler.hpp  autoware_ros2_agent.hpp  carla_ego_spawn_handler.hpp  carla_ros2_agent.hpp  gear_conversion.hpp  world_handler.hpp
cppnode/carla_ros2_agent/launch/: carla_ros2_agent.launch.xml
cppnode/carla_ros2_agent/libs/carla_build/include/carla/: Version.h
cppnode/carla_ros2_agent/libs/carla_build/lib/: libboost_atomic.so.1.80.0  libboost_filesystem.so.1.80.0  libboost_numpy310.so.1.80.0  libboost_program_options.so.1.80.0  libboost_python310.so.1.80.0  libboost_system.so.1.80.0  libpng16.la  libpng16.so.16.37.0
cppnode/carla_ros2_agent/libs/carla_build/lib/cmake/boost_atomic-1.80.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake  libboost_atomic-variant-static.cmake
cppnode/carla_ros2_agent/libs/carla_build/lib/cmake/boost_filesystem-1.80.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-shared.cmake  libboost_filesystem-variant-static.cmake
cppnode/carla_ros2_agent/libs/carla_build/lib/cmake/boost_headers-1.80.0/: boost_headers-config.cmake
cppnode/carla_ros2_agent/libs/carla_build/lib/cmake/boost_numpy-1.80.0/: boost_numpy-config.cmake  libboost_numpy-variant-shared-py3.10.cmake  libboost_numpy-variant-static-py3.10.cmake
cppnode/carla_ros2_agent/libs/carla_build/lib/cmake/boost_program_options-1.80.0/: boost_program_options-config.cmake  libboost_program_options-variant-shared.cmake  libboost_program_options-variant-static.cmake
cppnode/carla_ros2_agent/libs/carla_build/lib/cmake/boost_python-1.80.0/: boost_python-config.cmake  libboost_python-variant-shared-py3.10.cmake  libboost_python-variant-static-py3.10.cmake
cppnode/carla_ros2_agent/libs/carla_build/lib/cmake/boost_system-1.80.0/: boost_system-config.cmake  libboost_system-variant-shared.cmake  libboost_system-variant-static.cmake
cppnode/carla_ros2_agent/src/: agent.cpp  agent_handler.cpp  autoware_ros2_agent.cpp  carla_ego_spawn_handler.cpp  carla_ros2_agent.cpp  carla_ros2_bridge.cpp  world_handler.cpp
cppnode/pasta-interface/: .gitignore  CMakeLists.txt  README.md  package.xml
cppnode/pasta-interface/cmd/include/: cmd.hpp
cppnode/pasta-interface/cmd/src/: cmd.cpp
cppnode/pasta-interface/docs/: Modules.rst  Server.rst  conf.py  index.rst
cppnode/pasta-interface/example/: CMakeLists.txt  can.py  can.yaml  exPyModule.py  exPyModule.yaml  imu.py  imu.yaml  lidar.py  lidar.yaml  lidar_0_intensity.py  lidar_0_intensity.yaml  loadData.py  loadData.yaml  minNumpyLock.cpp  printShape.py  printShape.yaml  radar.py  radar.yaml  readSo.cpp  rotate.py  rotate.yaml  scale.py  scale.yaml  setBtoZero.py  setBtoZero.yaml  show.py  show.yaml  swapLatLon.py  swapLatLon.yaml  testCameraServer.cpp  testPythonPipeline_noServer.cpp  testServer.cpp  test_module.cpp
cppnode/pasta-interface/example/can/: CMakeLists.txt  client.cpp
cppnode/pasta-interface/example/carla/: CMakeLists.txt  client.cpp  libs
cppnode/pasta-interface/include/: commands.hpp  pasta_interface.hpp
cppnode/pasta-interface/python/include/: camera_module.hpp  can_module.hpp  gil_guard.hpp  gnss_module.hpp  imu_module.hpp  lidar_module.hpp  radar_module.hpp  test_module.hpp
cppnode/pasta-interface/python/src/: camera_module.cpp  can_module.cpp  gnss_module.cpp  imu_module.cpp  lidar_module.cpp  radar_module.cpp  test_module.cpp
cppnode/pasta-interface/python/stubGeneration/: Module_APIs.json  generateStub.py
cppnode/pasta-interface/server/: startServers.sh  stopServers.sh
cppnode/pasta-interface/server/include/: camera.hpp  can.hpp  gnss.hpp  imu.hpp  lidar.hpp  process_signatures.hpp  radar.hpp  remote_process.hpp  server.hpp
cppnode/pasta-interface/server/src/: camera.cpp  can.cpp  gnss.cpp  imu.cpp  lidar.cpp  radar.cpp  remote_process.cpp  server.cpp
cppnode/pasta_agent/: CMakeLists.txt  package.xml
cppnode/pasta_agent/cmake/: fmt.cmake
cppnode/pasta_agent/config/: pastaIDs.json
cppnode/pasta_agent/include/pasta_agent/: gear_conversion.hpp  pasta_interface.hpp  ros2_agent.hpp
cppnode/pasta_agent/launch/: pasta_agent.xml
cppnode/pasta_agent/src/: pasta_agent.cpp  pasta_interface.cpp  ros2_agent.cpp
(+27 files in other folders)
