<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>attack_ethernet</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="shea@fixstars.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>attack_ethernet_msgs</depend>
  <depend>geographiclib</depend>
  <depend>geo_pos_conv</depend>

  <build_depend>autoware_sensing_msgs</build_depend>
  <build_depend>autoware_auto_vehicle_msgs</build_depend>
  <build_depend>autoware_auto_control_msgs</build_depend>
  <build_depend>autoware_adapi_v1_msgs</build_depend>
  <build_depend>tier4_vehicle_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
